# rugdetector

./: .buildinfo  .dockerignore  .env.example  .gitignore  .gitmodules  ADVANCED_ANALYTICS_COMPLETE.md  ALCHEMY_INTEGRATION_COMPLETE.md  ALCHEMY_SETUP.md  BUILD_INSTRUCTIONS.md  CLOUD_DEPLOYMENT.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  Dockerfile  JOLT_ATLAS_INTEGRATION.md  JOLT_ATLAS_STATUS.md  PRETRAINED_MODEL_INTEGRATION.md  PROJECT_SPEC.md  RAILWAY_FIX.md  README.md  REAL_API_FINDINGS.md  REAL_DATA_TRAINING_SUMMARY.md  REAL_FEATURES_UPGRADE.md  REAL_JOLT_INTEGRATION.md  REAL_MODEL_COMPLETE.md  RENDER_BASE_SOLANA_UPDATE.md  RENDER_QUICK_START.md  SECURITY_IMPROVEMENTS.md  STATUS.md  TEST_RESULTS.md  X402_BADGE_ADDED.md  X402_PHASE1_COMPLETE.md  ZKML.md  ZKML_EXPLAINED.md  check_deployment.sh  create_cdp_wallet.sh  create_wallet.js  demo_server.py  monitor_cdp_deployment.sh  (+13 more)
api/: server.js
docs/: CONFIG_REFERENCE.md  HOW_IT_WORKS.md  ZKML_EXPLAINED.md
examples/: jolt_zkml_example.py
jolt_zkml/: Cargo.toml
jolt_zkml/python/: bindings.py
jolt_zkml/src/: lib.rs  main.rs
model/: convert_gemm_to_matmul.py  convert_h5_to_onnx.py  convert_keras_to_onnx.py  dex_analytics.py  extract_features.py  extract_keras_weights.py  h5_to_onnx_direct.py  inspect_h5.py  minimal_rugdetector.onnx  quantize_model.py  rugdetector_demo_real.onnx  rugdetector_demo_real_metadata.json  rugdetector_v1.onnx  rugdetector_v1_backup.onnx  rugdetector_v1_metadata.json  rugdetector_v1_nn.onnx  rugdetector_v1_nn_matmul.onnx  run_inference.py  (+9 more)
(+24 files in other folders)
