[package]
name = "jolt_zkml"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jolt_zkml_cli"
path = "src/main.rs"

[dependencies]
# Jolt Atlas dependencies (requires network to fetch)
# zkml-jolt-core = { git = "https://github.com/ICME-Lab/jolt-atlas", branch = "main" }
# onnx-tracer = { git = "https://github.com/ICME-Lab/jolt-atlas", branch = "main" }

# Cryptography
ark-bn254 = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }

# Jolt core (requires network)
# jolt-core = { git = "https://github.com/ICME-Lab/zkml-jolt", branch = "zkml-jolt" }

# Utilities
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
